--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "1.0.0",
   "description": "Games written in JavaScript, just for fun.",
   "scripts": {
-    "start": "live-server src"
+    "start": "live-server src",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "check": "npm run lint && npm run format:check && npm test"
   },
   "author": "stossmt",
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "@eslint/js": "^9.23.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "live-server": "^1.2.2",
+    "prettier": "^3.5.3"
   }
 }
